syntax = "proto3";
package com.kaizenflow.commerce.proto;

option java_multiple_files = true;
option java_package = "com.kaizenflow.commerce.proto.inventory";

import "google/protobuf/timestamp.proto";

message InventoryUpdateEvent {
  string product_id = 1;
  int32 available_quantity = 2;
  string inventory_status = 3;
  bool in_stock = 4;
  google.protobuf.Timestamp timestamp = 5;
}