syntax = "proto3";
package com.kaizenflow.commerce.proto;

option java_multiple_files = true;
option java_package = "com.kaizenflow.commerce.proto.product";

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  string category = 5;
}

message ProductEvent {
  enum EventType {
    CREATED = 0;
    UPDATED = 1;
    DELETED = 2;
  }

  EventType type = 1;
  string timestamp = 2;
  Product product = 3;
}